# semantic-layer

./: .gitignore  README.md  app.py  main.py  pyproject.toml  setup_db.py  test_agent.py  test_catalog.py  test_embeddings.py
metrics/: order_count.yml  total_revenue.yml
models/: customer.yml  orders.yml
semantic_layer/: __init__.py  __main__.py  agent.py  catalog.py  embeddings.py  graph.py  models.py  query.py
static/: index.html
